# sampleflip

./: .gitignore  README.md  pyproject.toml
src/sampleflip/: __init__.py  agent.py  cli.py  download.py  drum_check.py  render.py  search.py
src/sampleflip/core/: audio_utils.py  chord_detect.py  drum_gen.py  gross_beat.py  lofi_fx.py  mix_master.py  render_beat.py  sample_analysis.py
src/sampleflip/core/.ir_cache/: ir_5.0_4.0_3.0_0.3_2_0.1.npy  ir_5.0_4.0_3.5_0.35_2_0.15.npy  ir_6.0_5.0_3.5_0.25_3_0.25.npy  ir_8.0_6.0_3.5_0.2_4_0.4.npy
src/sampleflip/presets/: drums_ambient_trap.json  drums_dark_piano_trap.json  drums_ethiopian_trap.json  drums_funky_guitar_house.json  drums_guitar_trap.json  drums_jazzhouse.json  drums_jazzy_piano_house.json  drums_orchestral_trap.json  drums_sax_house.json  drums_soviet_trap.json  drums_thai_trap.json  drums_turkish_trap.json  drums_vocal_house.json
