[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sampleflip"
version = "0.1.0"
description = "Search YouTube for samples, generate full beats with drums, bass, and mastering"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [{name = "Ronan Takizawa"}]

dependencies = [
    "librosa>=0.10",
    "numpy",
    "scipy",
    "soundfile",
    "pedalboard",
    "pyroomacoustics",
    "pyloudnorm",
    "pydub",
    "click",
    "anthropic",
]

[project.scripts]
sampleflip = "sampleflip.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
sampleflip = ["presets/*.json"]
